--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         okhttp = '3.10.0'
         retrofit = '2.6.0'
         gsonVersion = '2.8.2'
+        timberVersion = '4.7.1'
     }
 
     repositories {
