--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,12 @@ buildscript {
         retrofit = '2.6.0'
         gsonVersion = '2.8.2'
         timberVersion = '4.7.1'
+        glideVersion = '4.9.0'
+        recyclerViewVersion = '1.1.0-alpha05'
+        coroutinesVersion = "1.3.0-RC"
+        lifecycleVersion = '2.2.0-alpha02'
+        roomVersion = '2.2.0-alpha01'
+        workVersion = '2.1.0'
     }
 
     repositories {
