--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,13 @@ dependencies {
     // Tools
     implementation "com.jakewharton.timber:timber:$rootProject.timberVersion"
 
+    // Dagger
+    kapt "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
+    kapt "com.google.dagger:dagger-android-processor:$rootProject.daggerVersion"
+    implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
+    implementation "com.google.dagger:dagger-android:$rootProject.daggerVersion"
+    implementation "com.google.dagger:dagger-android-support:$rootProject.daggerVersion"
+
     //Image
     implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
 
