--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         lifecycleVersion = '2.2.0-alpha02'
         roomVersion = '2.2.0-alpha01'
         workVersion = '2.1.0'
+        daggerVersion = '2.23.2'
     }
 
     repositories {
